removing unused endpoints
